--- a/src/main/resources/com/example/votoelettronico/panoramicaReferendum.fxml
+++ b/src/main/resources/com/example/votoelettronico/panoramicaReferendum.fxml
@@ -17,14 +17,9 @@
    <children>
       <AnchorPane prefHeight="600.0" prefWidth="231.0" style="-fx-background-color: #2596BE;">
          <children>
-            <VBox layoutX="-24.0" layoutY="181.0" prefHeight="323.0" prefWidth="215.0" spacing="20.0">
+            <VBox layoutX="-25.0" layoutY="180.0" prefHeight="168.0" prefWidth="215.0" spacing="20.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#goToManager" prefHeight="65.0" prefWidth="215.0" styleClass="button-blue" text="Panoramica" textFill="WHITE">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="215.0" styleClass="button-blue" text="Risultati" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -34,14 +29,9 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button layoutX="10.0" layoutY="265.0" mnemonicParsing="false" onAction="#goToOption" prefHeight="64.0" prefWidth="215.0" styleClass="button-blue" text="Impostazioni" textFill="WHITE">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
                </children>
             </VBox>
-            <Button fx:id="NomeElezione" layoutX="8.0" layoutY="31.0" mnemonicParsing="false" onAction="#goToManager" prefHeight="99.0" prefWidth="215.0" styleClass="button-orange" text="NomeElezione" textFill="WHITE">
+            <Button fx:id="NomeElezione" layoutX="8.0" layoutY="31.0" mnemonicParsing="false" onAction="#cambiaElezione" prefHeight="99.0" prefWidth="215.0" styleClass="button-orange" text="NomeElezione" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
@@ -90,7 +80,7 @@
             </AnchorPane>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="223.0" prefWidth="445.0">
                <children>
-                  <TableView fx:id="Ctable" layoutX="8.0" layoutY="4.0" prefHeight="289.0" prefWidth="428.0" stylesheets="@../table.css">
+                  <TableView fx:id="Ctable" layoutX="8.0" layoutY="4.0" prefHeight="289.0" prefWidth="428.0">
                      <columns>
                         <TableColumn fx:id="name" prefWidth="216.0" text="nome " />
                         <TableColumn fx:id="surname" prefWidth="211.0" text="cognome" />
@@ -100,22 +90,57 @@
             </AnchorPane>
          </items>
       </SplitPane>
-      <Button fx:id="Conferma" layoutX="508.0" layoutY="402.0" mnemonicParsing="false" onAction="#ConfermaElezione" prefHeight="65.0" prefWidth="215.0" styleClass="button-blue" text="CONFERMA" textFill="WHITE">
+      <Button fx:id="Conferma" layoutX="707.0" layoutY="447.0" mnemonicParsing="false" onAction="#ConfermaElezione" prefHeight="65.0" prefWidth="215.0" styleClass="button-blue" text="CONFERMA" textFill="WHITE">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Text fx:id="allertConfermaElezione" fill="RED" layoutX="239.0" layoutY="543.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" Messaggio di errore Messaggio di errore Messaggio di erroreMessaggio di erroreMessaggio di erroreMessaggio di errore" textAlignment="CENTER" wrappingWidth="754.5367431640625">
+      <Text fx:id="allertConfermaElezione" fill="RED" layoutX="222.0" layoutY="548.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" Messaggio di errore Messaggio di errore Messaggio di erroreMessaggio di erroreMessaggio di erroreMessaggio di errore" textAlignment="CENTER" wrappingWidth="754.5367431640625">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <TextField fx:id="DomandaReferendum" layoutX="296.0" layoutY="236.0" prefHeight="128.0" prefWidth="619.0" />
-      <Text fill="#145369" layoutX="296.0" layoutY="198.0" strokeType="OUTSIDE" strokeWidth="0.0" text="INSERISCI LA DOMANDA PER IL REFERENDUM" textAlignment="CENTER" wrappingWidth="619.0">
+      <TextField fx:id="DomandaReferendum" layoutX="630.0" layoutY="170.0" prefHeight="243.0" prefWidth="326.0" />
+      <Text fill="#145369" layoutX="594.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="INSERISCI LA DOMANDA PER IL REFERENDUM" textAlignment="CENTER" wrappingWidth="383.0">
          <font>
             <Font name="System Bold Italic" size="18.0" />
          </font>
       </Text>
       <Label fx:id="nomeElezione" alignment="CENTER" layoutX="239.0" layoutY="-130.0" prefHeight="85.0" prefWidth="197.0" style="-fx-font-size: 25;" text="NOME ELEZIONE" textAlignment="CENTER" textFill="#ff5500" />
+      <Button fx:id="LoginButton1" layoutX="278.0" layoutY="464.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="266.0" style="-fx-background-color: #be4d25;" text="TERMINA SUBITO LA VOTAZIONE" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
+      <TextField fx:id="nameField" editable="false" layoutX="340.0" layoutY="139.0" prefHeight="36.0" prefWidth="142.0" promptText="nome" style="-fx-background-color: #e9f5f9; -fx-border-color: #000000; -fx-border-radius: 10px; -fx-alignment: center;">
+         <font>
+            <Font name="Arial" size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="dataInizioField1" editable="false" layoutX="452.0" layoutY="266.0" prefHeight="36.0" prefWidth="142.0" promptText="Data di inizio" style="-fx-background-color: #e9f5f9; -fx-border-color: #000000; -fx-border-radius: 10px; -fx-alignment: center;" text="Ora di inizio">
+         <font>
+            <Font name="Arial" size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="dataInizioField" editable="false" layoutX="244.0" layoutY="266.0" prefHeight="36.0" prefWidth="142.0" promptText="Data di inizio" style="-fx-background-color: #e9f5f9; -fx-border-color: #000000; -fx-border-radius: 10px; -fx-alignment: center;">
+         <font>
+            <Font name="Arial" size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="dataFineField" editable="false" layoutX="238.0" layoutY="196.0" prefHeight="36.0" prefWidth="142.0" promptText="Data di fine" style="-fx-background-color: #e9f5f9; -fx-border-color: #000000; -fx-border-radius: 10px; -fx-alignment: center;">
+         <font>
+            <Font name="Arial" size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="dataFineField1" editable="false" layoutX="452.0" layoutY="196.0" prefHeight="36.0" prefWidth="142.0" promptText="Data di fine" style="-fx-background-color: #e9f5f9; -fx-border-color: #000000; -fx-border-radius: 10px; -fx-alignment: center;" text="Ora di inizio">
+         <font>
+            <Font name="Arial" size="18.0" />
+         </font>
+      </TextField>
+      <Button fx:id="Salva" layoutX="360.0" layoutY="344.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="102.0" style="-fx-background-color: #be4d25;" text="SALVA" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
